modify project description

--- a/index.html
+++ b/index.html
@@ -29,19 +29,14 @@
         <p>Life is full surprises.</p>
     </section>
 
-    <section id="portfolio" class="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-item">
-            <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
-        </div>
-        <div class="portfolio-item">
-            <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
-        </div>
-        <!-- Add more portfolio items as needed -->
+    <div class="project">
+        <h3>Portfolio Website</h3>
+        <p>A responsive personal portfolio to showcase my skills, projects, and experience.</p>
+    </div>
+    <div class="project">
+        <h3>Weather App</h3>
+        <p>An interactive application that provides real-time weather updates using open APIs.</p>
+    </div>    
     </section>
 
     <section id="contact" class="contact">
