modify Contact Me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Your Portfolio</title>
+    <title>Kenrick Lim Portfolio</title>
 </head>
 <body>
     <header>
@@ -41,7 +41,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. Github: https://github.com/kenricklim</p>
     </section>
 
     <footer>
@@ -51,7 +51,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Kenrick Lim. All rights reserved.</p>
     </footer>
 </body>
 </html>
