modify About Me

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Life is full surprises.</p>
+        <p>I AM KENRICK ERROL R. LIM, A 3RD YEAR BSIT STUDENT FROM PALAWAN STATE UNIVERSITY MAIN CAMPUS. Born and Raised in Puerto Princesa City, Palawan.</p>
     </section>
 
     <div class="project">
